# better-dice

./: Cargo.toml  README.md
src/: main.rs
static/: index.html  main.css  main.js
