[package]
name = "better_dice"
version = "0.1.0"
authors = ["sbock <sebastian.bockholt@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
futures = "0.3.4"
bytes = "0.5.4"
rand = "0.7.3"
ammonia = "3.1.0"
percent-encoding = "2.1.0"
